# Contextualized

./: .gitignore  .pylintrc  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  README.md  dev_requirements.txt  format_style.sh  make_docs.sh  pyproject.toml  run_tests.py  setup.py  tests.py  tmp_test.py  trainer.py
.github/workflows/: publish.yml  pylint.yml  unit-test.yml
configs/: correlation_test.yaml  defaults.yaml  regression_test.yaml
contextualized/: __init__.py  baselines.py  callbacks.py  correlator.py  data.py  functions.py  losses.py  main.py  modules.py  networks.py  notmad.py  regression.py  tests.py  utils.py
contextualized/analysis/: __init__.py  accuracy_split.py  bootstraps.py  effects.py  embeddings.py  pvals.py  tests.py  utils.py
contextualized/baselines/: __init__.py  networks.py  tests.py
contextualized/dags/: __init__.py  baselines.py  callbacks.py  graph_utils.py  lightning_modules.py  losses.py  notmad.py  tests.py  tests_fast.py  torch_notmad.py  torch_utils.py  trainers.py
contextualized/dags/notmad_helpers/: analyze_utils.py  baselines.py  config_utils.py  dir_utils.py  graph_utils.py  log_helper.py  simulation.py  tf_utils.py  utils.py
contextualized/dags/torch_notmad/: baselines.py  (+8 more)
contextualized/easy/: ContextualGAM.py  ContextualizedClassifier.py  ContextualizedNetworks.py  ContextualizedRegressor.py  __init__.py  tests.py  utils.py  wrappers.py
contextualized/helpers/: simulation.py
contextualized/networks/: __init__.py  lightning_modules.py  notmad.py  tests.py  trainers.py
contextualized/notmad_helpers/: dir_utils.py  graph_utils.py  log_helper.py  tf_utils.py
contextualized/regression/: __init__.py  datamodules.py  datasets.py  lightning_modules.py  losses.py  metamodels.py  regularizers.py  tests.py  trainers.py
correlator/: correlator.py  dataset.py  regression.py
correlator/helpers/: simulation.py
demos/: main_demo.ipynb
demos/Easy-demo/: cgam_demo.ipynb  easy_classification_demo.ipynb  easy_demo.ipynb  easy_networks_demo.ipynb
docs/: _config.yml  _toc.yml  benefits_of_contextualized_ML.ipynb  conf.py  faq.ipynb  index.rst  installation.ipynb  installation.md  intro.md  model-analysis.ipynb  model-fitting.ipynb  requirements.txt  under-the-hood.md
docs/demos/: analyze_network_results.ipynb  benchmark_bayesian_networks_raytune.ipynb  benefits.ipynb  custom_models.ipynb  easy_bayesian_networks.ipynb  easy_bayesian_networks_factors.ipynb  easy_cgam.ipynb  easy_classification.ipynb  easy_correlation_networks.ipynb  easy_markov_networks.ipynb  easy_networks.ipynb  easy_regression.ipynb  project_to_dag_time.ipynb  results.csv  robust-outliers.ipynb  sequential_testing.ipynb
docs/models/: easy_bayesian_networks_factors.ipynb  easy_classification.ipynb  easy_correlation_networks.ipynb  easy_networks.ipynb  easy_regression.ipynb  networks_intro.md  regression_intro.md
docs/source/: analysis.rst  conf.py  easy.rst
experiments/GRNs/: pulse_response.ipynb
experiments/MIMIC-IV/: mimic4_demo.ipynb
experiments/MNIST-demo/: mnist.ipynb
experiments/SERGIO/: gene.py  generator.py  run_generator.sh  sergio.py
experiments/simulation/: cluster_demo.ipynb  dataloader.py  demo.ipynb  graphical_paramsweep.py  paramsweep.py  paramsweep.sbatch  random_paramsweep.py  test_dataloader.py  tests.sh
joss/: paper.bib  paper.md
joss/figs/: clusters_vs_context.pptx  context_encoders.pptx  context_encoders_sideways.pptx  contextual_regression.pptx  encoder_types.pptx  how_to_contextualize.pptx  nonparametric_reg.pptx
model/: correlator.py  dataset.py  trainer.py
notebooks/: test_plot_embeddings.ipynb
tests/: test_correlator.py  test_dataloader.py  test_dataset.py  test_normalize.py  test_normalize_wrapper.py  test_plot_homo_con_effects.py
website/: README.md  index.html  script.js
website/assets/: networks.pptx  regression.pptx
website/css/: style.css
(+103 files in other folders)
