[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextualized-ml"
version = "0.2.8"
authors = [
  { name="Caleb Ellington", email="cellingt@cs.cmu.edu" },
  { name="Ben Lengerich", email="blengeri@mit.edu" },
]
description = "A statistical machine learning toolbox for estimating models, distributions, and functions with sample-specific parameters."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [
    "contextual modeling",
    "machine learning",
    "graphical models",
    "meta-learning",
    "multitask learning",
]
dependencies = [
    'lightning>=2.0.0',
    'torch>=2.0.0,<2.2.0',
    'torchvision>=0.8.0',
    'numpy>=1.19.0',
    'pandas>=2.0.0',
    'scikit-learn>=1.0.0',
    'igraph>=0.11.0',
    'matplotlib>=3.3.0',
]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.hatch.build.targets.wheel]
packages = ["contextualized"]

[project.urls]
"Homepage" = "https://contextualized.ml/"
"Source" = "https://github.com/cnellington/Contextualized/"
